версия для Макссима

--- a/public_html/my_works.html
+++ b/public_html/my_works.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="fonts/fira/fira.css">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="style/pojects.css">
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -120,12 +121,13 @@
 								</div>
 							</div>
 						</div> 
+						
 					</div>
 
 					<footer class="footer">
 						<div class="container">
 							<div class="lock">
-								<a href="#" class="lock-inner"></a>
+								<a href="singin.html" class="lock-inner"></a>
 							</div>
 							<div class="copyright">
 								© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его.
@@ -133,5 +135,7 @@
 						</div>
 					</footer>
 
-				</body>
-				</html>
+<script src="bower/jquery/dist/jquery.js"></script>
+<script src="scripts/main.js"></script>
+</body>
+</html>
