--- a/public_html/contact_to_me.html
+++ b/public_html/contact_to_me.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="style/about.css">
 	<link rel="stylesheet" href="style/contact_to_me.css">
 	<link rel="stylesheet" href="style/pojects.css">
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
@@ -73,9 +74,9 @@
 									</address>
 								</aside>
 								<div class="var-content">
-								<section class="contactbox">
+									<section class="contactbox">
 										<div class="contact-header">
-										<p class="boxheader">У вас интересный проект? Напишите мне</p>
+											<p class="boxheader">У вас интересный проект? Напишите мне</p>
 										</div>
 										<div class="contactbody">
 											<form name="contact" method="post" action="#">
@@ -110,7 +111,7 @@
 
 
 												<div class="box-buttons clearfix">
-												<div class="row1">
+													<div class="row1">
 														<button type="submit" class="buttonstyle submit-in-form">Отправить</button>
 													</div>
 													<div class="row2 butreset">
@@ -141,6 +142,7 @@
 							</div>
 						</div>
 					</footer>
-
+					<script src="bower/jquery/dist/jquery.js"></script>
+					<script src="scripts/main.js"></script>
 				</body>
 				</html>
