--- a/public_html/index.html
+++ b/public_html/index.html
@@ -148,13 +148,14 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="lock">
-				<a href="#" class="lock-inner"></a>
+				<a href="singin.html" class="lock-inner"></a>
 			</div>
 			<div class="copyright">
 				© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его.
 			</div>
 		</div>
 	</footer>
-
+<script src="bower/jquery/dist/jquery.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
