--- a/public_html/popup_test.html
+++ b/public_html/popup_test.html
@@ -22,9 +22,9 @@
 			<div class="popup-list">
 				<div class="aass">
 				<label for="" class="popup-label">Картинка проекта</label>
-				<div class="popup-addpic-box" >
+				<label class="popup-addpic-box" >
 				<input type="file" class="popup-add-pic">
-				</div>
+				</label>
 				<input type="text" class="popup-input" placeholder="Загрузите изображение" name="">
 				
 				
